--Stop getting armor after round 40 --make coins from special zombies higher --put prices in gui --add eggs to gui --can stack towers on the same block --config inputs --various other bugfixes
Signed-off-by: Logan Slicker <Lslicker24@gmail.com>