@@ -12,10 +12,12 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.PriorityQueue;
 
+import static ksucapproj.blockstowerdefense1.placeholderAPI.PlaceholderAPIExpansion.config;
+
 public class SniperTower extends Tower {
     public SniperTower(Location location, Player owner, String mapId, JavaPlugin plugin) {
         // Large scan radius, slow attack interval, high damage
-        super(location, owner, mapId, 15, 60L, plugin);///
+        super(location, owner, mapId, config.getSniperTowerRadius(), config.getSniperTowerAttacksp(), plugin);
     }
 
     @Override
@@ -33,8 +35,8 @@ public class SniperTower extends Tower {
         for (Entity entity : nearbyEntities) {
             if (entity instanceof Mob & entity.getType() != EntityType.VILLAGER) {
                 if (entity.hasMetadata("gameSession") && towerEntity.hasMetadata("owner")) {
-                    String zombieOwner = entity.getMetadata("gameSession").get(0).asString();
-                    String towerOwner = towerEntity.getMetadata("owner").get(0).asString();
+                    String zombieOwner = entity.getMetadata("gameSession").getFirst().asString();
+                    String towerOwner = towerEntity.getMetadata("owner").getFirst().asString();
                     if (zombieOwner.equals(towerOwner)) {
                         targetQueue.add(entity);
                     }
@@ -47,17 +49,14 @@ public class SniperTower extends Tower {
         if (!targetQueue.isEmpty()) {
             Entity target = targetQueue.poll();
             faceTarget(target);
-            if (target instanceof Mob) {
-                Mob zombie = (Mob) target;
+            if (target instanceof Mob zombie) {
                 // Visual effect of a precise shot
                 zombie.getWorld().spawnParticle(Particle.EXPLOSION, zombie.getLocation(), 1);
                 // High damage but slow attack
                 if(zombie.hasPotionEffect(PotionEffectType.FIRE_RESISTANCE)) {
                     zombie.damage(0.0);
-                } else {zombie.damage(25.0);}///
+                } else {zombie.damage(config.getSniperTowerDamage());}
                 target.setMetadata("attacker", new FixedMetadataValue(plugin, getTowerOwner(towerEntity.getUniqueId())));
-                // Slight knockback effect
-                zombie.setVelocity(new Vector(0, 0.5, 0));
             }
         }
     }
